Bug 24612: Memory & fd leaks in local transports

X.Org bug #24612 <http://bugs.freedesktop.org/show_bug.cgi?id=24612>
Patch #30548 <http://bugs.freedesktop.org/attachment.cgi?id=30548>

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>